src/objects/Partnership__c.object
<CustomObject>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account that the Partnership is for.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to easily report on the Active Partnerships. Initially will look at the Status and Agreement Expiry.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiry__c</fullName>
        <description>Identifies when the current contract will end. In the event that the Partnership is perpetual, an arbitrary date will be selected. i.e. 01/01/2999</description>
        <inlineHelpText>In the event that the Partnership is perpetual, an arbitrary date will be selected. i.e. 01/01/2999</inlineHelpText>
        <label>Agreement Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start__c</fullName>
        <description>Identifies when the current contract started.</description>
        <label>Agreement Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics/Dashboard/BI</fullName>
                </value>
                <value>
                    <fullName>Application Monitoring</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Block Storage</fullName>
                </value>
                <value>
                    <fullName>Cloud Monitoring</fullName>
                </value>
                <value>
                    <fullName>Cloud Test/Load</fullName>
                </value>
                <value>
                    <fullName>Code Mgmt/Release</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Database - NoSQL</fullName>
                </value>
                <value>
                    <fullName>Database - SQL</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>DNS, CDN</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Identity Management</fullName>
                </value>
                <value>
                    <fullName>Infrastructure, IaaS</fullName>
                </value>
                <value>
                    <fullName>Language Platform</fullName>
                </value>
                <value>
                    <fullName>Load Balancing/Caching</fullName>
                </value>
                <value>
                    <fullName>Logging</fullName>
                </value>
                <value>
                    <fullName>Messaging/AMQP</fullName>
                </value>
                <value>
                    <fullName>Middleware</fullName>
                </value>
                <value>
                    <fullName>Mobile Platform</fullName>
                </value>
                <value>
                    <fullName>Object Storage</fullName>
                </value>
                <value>
                    <fullName>Orchestration</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Test/QA/Load Testing</fullName>
                </value>
                <value>
                    <fullName>Voice/SMS</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information about the Partnership</description>
        <inlineHelpText>Additional information about the Partnership</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Market_Traction__c</fullName>
        <label>Partner Market Traction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User (BD Rep) who owns the relationship with the partner.</description>
        <label>Partnership Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Competency__c</fullName>
        <inlineHelpText>Select more than one if applicable.</inlineHelpText>
        <label>Partnership Competency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Name__c</fullName>
        <description>Read only field which combines the Account.Name + Program.Name. Used on Partnership Layout.</description>
        <formula>Account__r.Name + " - " + Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partnership Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Priority__c</fullName>
        <label>Pivotal Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 - High</fullName>
                </value>
                <value>
                    <fullName>4 - Med High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>2 - Med Low</fullName>
                </value>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>0 - Not Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the individual that will act as the point of contact for communication around the Partnership. Lookup (Contact).</description>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>The specific Program that the Account is applying for.</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Identifies the states of the partnership.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>No Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Entitlement_End_Date__c</fullName>
        <label>Support Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Entitlement__c</fullName>
        <label>Support Entitlement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer Support</fullName>
                </value>
                <value>
                    <fullName>Premier Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Interoperability_Status__c</fullName>
        <label>Tech Interoperability Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Work Begun</fullName>
                </value>
                <value>
                    <fullName>On Going</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Identifies the Partner level.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used to to track the different partnership tracks that an Account may enter into.</description>
    <label>Partnership</label>
    <nameField>
        <label>Partnership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partnership_Name__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Program__c</columns>
        <columns>Tier__c</columns>
        <columns>Agreement_Start__c</columns>
        <columns>Agreement_Expiry__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pivotal_One_Program_Partnerships_New</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Partnership_Account_Owner__c</columns>
        <columns>Partnership_Competency__c</columns>
        <columns>Tier__c</columns>
        <columns>Pivotal_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Active__c</columns>
        <columns>Tech_Interoperability_Status__c</columns>
        <columns>Category__c</columns>
        <columns>Agreement_Start__c</columns>
        <columns>Agreement_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Pivotal Tech Alliances Program</value>
        </filters>
        <label>Pivotal One Program Partnerships - ALL</label>
    </listViews>
    <listViews>
        <fullName>VARs_and_Distributors</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Account__c</columns>
        <columns>Program__c</columns>
        <columns>Agreement_Start__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Pivotal Distributors</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Pivotal Value Added Reseller (VAR) Program</value>
        </filters>
        <label>VARs and Distributors</label>
    </listViews>
</CustomObject>